--- a/my-website/src/index.css
+++ b/my-website/src/index.css
@@ -90,7 +90,7 @@ code {
   margin: 4px;
   font-family: monospace;
 
-
+/*   ///http://TannerOates2.github.io/TannerOates2.github.io/*/
 }
 .Link-button {
   color: #61dafb;
